--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 				</div>
 				<button class="button login_submit">
 					<span class="button_text">Login</span>
-					<i class="button_icon fas fa-chervron-right"></i>
+					<i class="button_icon fas fa-chevron-right"></i>
 				</button>
 			</form>
 
 			<div class="social-login">
 				<h3>Login in</h3>
-				<div class="social icons">
-					<a href="#" class="social-login_icons fab fa-instagram"></a>
-					<a href="#" class="social-login_icons fab fa-facebook"></a>
-					<a href="#" class="social-login_icons fab fa-twitter"></a>
-					<a href="#" class="social-login_icons fab fa-telegram"></a>
+				<div class="social-icons">
+					<a href="#" class="social-login_icon fab fa-instagram"></a>
+					<a href="#" class="social-login_icon fab fa-facebook"></a>
+					<a href="#" class="social-login_icon fab fa-twitter"></a>
+					<a href="#" class="social-login_icon fab fa-telegram"></a>
 				</div>
 			</div>
 		</div>
