--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 			<form action="#" class="login">
 				<div class="login_field">
 					<i class="login_icon fas fa-user"></i>
-					<input type="email" class="login_input" placeholder="Email address">
+					<input type="email" class="login_input" placeholder="Email address" id="email_login">
 				</div>
 				<div class="login_field">
 					<i class="login_icon fas fa-user"></i>
-					<input type="password" class="login_input" placeholder="Password">
+					<input type="password" class="login_input" placeholder="Password" id="password_login">
 				</div>
 				<button class="button login_submit">
 					<span class="button_text">Login</span>
